--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,9 @@
             </ul>
           </nav>
     </header>
-        <p>Contenido principal de la página.</p>
+        <div class="banner">
+  <img src="Banner web_Mesa de trabajo 1 1" alt="Banner principal">
+</div>
     <footer>
         <p>© 2025 Jenny Sarmiento medicina estetica. Todos los derechos reservados.</p>
     </footer>
