--- a/Index.html
+++ b/Index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny Sarmiento medicina estética</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap');
-        </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dra. Jenny Sarmiento</title>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <header>
-        <h1>Reafirma tu belleza con Confianza</h1>
-        <nav class="navbar">
-            <ul class="nav-menu">
-              <li><a href="Inicio.html">Inicio</a></li>
-              <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
-              <li><a href="tratamientos.html">Tratamientos</a></li>
-              <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
-            </ul>
-          </nav>
-    </header>
-        <div class="banner">
-  <img src="Banner web_Mesa de trabajo 1 1" alt="Banner principal">
-</div>
-    <footer>
-        <p>© 2025 Jenny Sarmiento medicina estetica. Todos los derechos reservados.</p>
-    </footer>
+  <header class="encabezado">
+    <div class="contenedor-header">
+      <img src="img/logo-jenny.png" alt="Logo Dra. Jenny Sarmiento" class="logo">
+      <nav class="menu">
+        <ul>
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#sobre">Sobre la doctora</a></li>
+          <li><a href="#tratamientos">Tratamientos</a></li>
+          <li><a href="#cita">Agenda tu cita</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
