--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dra. Jenny Sarmiento</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Dra. Jenny Sarmiento</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
 <body>
-  <header class="encabezado">
-    <div class="contenedor-header">
-      <img src="img/logo-jenny.png" alt="Logo Dra. Jenny Sarmiento" class="logo">
-      <nav class="menu">
-        <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#sobre">Sobre la doctora</a></li>
-          <li><a href="#tratamientos">Tratamientos</a></li>
-          <li><a href="#cita">Agenda tu cita</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-</body>
-</html>
+    <!--Barra de menú-->
+    <header>
+        <div class="menu">
+        <nav>
+            <ul>
+                <li><img src="LogoVR1.png"></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="Agenda_tu_cita.html">Agenda tu cita</a></li>
+                <li><a href="Sobre_la_doctora.html">Sobre la doctora</a></li>
+                <li><a href="Tratamientos.html">Tratamientos</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    <!--Banner-->
+    <main>
+        <section id="Banner">
+            <img src="Banner.png" alt="Banner Dra. Jenny Sarmiento">
+            <!--Aquí va un botón-->
+        </section>
+    <!--Testimonios-->
+        <section id="Historiasdebelleza">
+            <div class="container"><h3>Historias de belleza</h3></div>
+            <div class="container">
+                <div class="item img"><img src="Web dra Jenny Sarmiento/Images/CarlosMilan.jpg" alt="Carlos Milan"><h2>Carlos Milan<h2></h2> <p>“Mi cabello nunca se vio tan bien, he recuperado mi confianza gracias a la mesoterapia de la doctora, estoy profundamente agradecido.”</p></div>
+                <div class="item img"><img src="Web dra Jenny Sarmiento/Images/EmiliaCortez.jpg" alt="Emilia Cortez"><h2>Emilia Cortez</h2> <p>“¡¡¡Maravilloso!!!! Mi rostro tiene nueva vida, me siento como si tuviera 20 otra vez.” </p></div>
+                <div class="item img"><img src="Web dra Jenny Sarmiento/Images/ValentinaBelanova.jpg" alt="Valentina Belanova"><h2>Valentina Belanova<h2> <p>“Después de pasar el peor momento de mi vida la doctora Jenny me ayudo a reconstruir eso que había perdido, muchisimas gracias.”</p></div>
+            </div>
+        </section>
+    <!--Mapa del consultorio-->
+        <section id="Encuentranuestroconsultorio">
+            <h2>Encuentra nuestro consultorio</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d248.52612385466628!2d-74.04002649503975!3d4.697216581684659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sstemwell%20bogota!5e0!3m2!1ses-419!2sco!4v1745268511233!5m2!1ses-419!2sco"
+            width="100%" 
+            height="400" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+        </section>
+    </main>
+    <footer>
+        <div class="fotter">
+            <nav>
+                <ul>
+                    <li><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></li>
+                    <li><a href="TyC.html">Terminos y condiciones</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
