--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
         <div class="menu">
         <nav>
             <ul>
-                <li><img src="LogoVR1.png"></li>
+                <li><img src="Images/LogoVR1.png"></li>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="Agenda_tu_cita.html">Agenda tu cita</a></li>
                 <li><a href="Sobre_la_doctora.html">Sobre la doctora</a></li>
