--- a/Index.html
+++ b/Index.html
@@ -31,9 +31,9 @@
         <section id="Historiasdebelleza">
             <div class="container"><h3>Historias de belleza</h3></div>
             <div class="container">
-                <div class="item img"><img src="Web dra Jenny Sarmiento/Images/CarlosMilan.jpg" alt="Carlos Milan"><h2>Carlos Milan<h2></h2> <p>“Mi cabello nunca se vio tan bien, he recuperado mi confianza gracias a la mesoterapia de la doctora, estoy profundamente agradecido.”</p></div>
-                <div class="item img"><img src="Web dra Jenny Sarmiento/Images/EmiliaCortez.jpg" alt="Emilia Cortez"><h2>Emilia Cortez</h2> <p>“¡¡¡Maravilloso!!!! Mi rostro tiene nueva vida, me siento como si tuviera 20 otra vez.” </p></div>
-                <div class="item img"><img src="Web dra Jenny Sarmiento/Images/ValentinaBelanova.jpg" alt="Valentina Belanova"><h2>Valentina Belanova<h2> <p>“Después de pasar el peor momento de mi vida la doctora Jenny me ayudo a reconstruir eso que había perdido, muchisimas gracias.”</p></div>
+                <div class="item img"><img src="Images/CarlosMilan.jpg" alt="Carlos Milan"><h2>Carlos Milan<h2></h2> <p>“Mi cabello nunca se vio tan bien, he recuperado mi confianza gracias a la mesoterapia de la doctora, estoy profundamente agradecido.”</p></div>
+                <div class="item img"><img src="Images/EmiliaCortez.jpg" alt="Emilia Cortez"><h2>Emilia Cortez</h2> <p>“¡¡¡Maravilloso!!!! Mi rostro tiene nueva vida, me siento como si tuviera 20 otra vez.” </p></div>
+                <div class="item img"><img src="Images/ValentinaBelanova.jpg" alt="Valentina Belanova"><h2>Valentina Belanova<h2> <p>“Después de pasar el peor momento de mi vida la doctora Jenny me ayudo a reconstruir eso que había perdido, muchisimas gracias.”</p></div>
             </div>
         </section>
     <!--Mapa del consultorio-->
