--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><img src="Images/LogoVR1.png"></li>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="Agenda_tu_cita.html">Agenda tu cita</a></li>
-                <li><a href="Sobre_la_doctora.html">Sobre la doctora</a></li>
+                <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
+                <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
                 <li><a href="Tratamientos.html">Tratamientos</a></li>
             </ul>
         </nav>
