Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -4,83 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> sobre la Dra. Jenny Sarmiento</title>
-    <style>
-      body {
-        margin: 0;
-        font-family: 'Sinteca';
-        background-color: #fefefe;
-        color: #1e1e1e;
-      }
-      .hero {
-        background-image: url('Clip path group (3)'); 
-        background-size: cover;
-        background-position: center;
-        height: 100 vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        color: white;
-        padding: 0 20 px;
-      }
-
-      .hero h1 {
-        font-family: 'Safira';
-        font-size: 44 pts;
-        margin: 0;
-      }
-
-      .hero button {
-        margin-top: 20 px;
-        padding: 12 px 24 px;
-        background-color: #a98c64; 
-        color: white;
-        border: none;
-        border-radius: 8 px;
-        font-size: 13 px;
-        cursor: pointer;
-        transition: background-color 0.3 s;
-      }
-
-      .hero button:hover {
-        background-color: #8c714d;
-      }
-
-      /* Sección sobre la doctora */
-      .about {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        padding: 60px 20px;
-        background-color: #f6f6f6;
-      }
-
-      .about img {
-        width: 300px;
-        max-width: 90vw;
-        border-radius: 20px;
-        margin: 20px;
-      }
-
-      .about-text {
-        max-width: 500px;
-        margin: 20px;
-      }
-
-      .about-text h2 {
-        font-family: 'Dragon Serial Bold', sans-serif;
-        font-size: 2rem;
-        margin-bottom: 10px;
-        color: #153a3a; /* verde oscuro */
-      }
-
-      .about-text p {
-        line-height: 1.6;
-        font-size: 1rem;
-      }
-    </style>
   </head>
   <body>
     <!-- Banner principal -->
@@ -95,9 +18,7 @@
       <div class="about-text">
         <h2>Sobre la doctora</h2>
         <p>
-          Con más de 10 años de experiencia en medicina estética y formación
-          especializada en micropigmentación, la Dra. Jenny Sarmiento se dedica
-          a realzar tu belleza natural con profesionalismo, ética y cuidado.
+          Con más de cinco años de experiencia en medicina estética y micropigmentación , la Dra. Jenny Sarmiento es médica egresadaUniversidad de La Sabana , especializada en tratamientos avanzados para el rejuvenecimientoprofesionalismo, innovación y un alto nivel de personalización , garantizando resultados naturales y seguros para cada paciente. SuRealzar la belleza con un enfoque cómodo y personalizado , brindando procedimientos de vanguardia.medicina estética en Bogotá , su práctica se distingue por la excelencia, la confianza y el negocio
         </p>
       </div>
     </section>
