Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -14,7 +14,7 @@
 
     <!-- Sección Sobre la Doctora -->
     <section class="about">
-      <img src="doctora.jpg" alt="Dra. Jenny Sarmiento" />
+      <img src="Doctora Jenny Sarmiento.png" alt="Dra. Jenny Sarmiento"/>
       <div class="about-text">
         <h2>Sobre la doctora</h2>
         <p>
