--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -12,7 +12,7 @@
     </header>
     <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="Inicio.html">Inicio</a></li>
+          <li><a href="Index.html">Inicio</a></li>
           <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
           <li><a href="tratamientos.html">Tratamientos</a></li>
           <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
