--- a/Index.html
+++ b/Index.html
@@ -9,33 +9,55 @@
 <body>
     <!--Barra de menú-->
     <header>
-        <div class="menu">
-        <nav>
+    <div class="header">
+        <ul class="nav">
+          <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
+          <li><a href="Index.html">Inicio</a></li>
+          <li><a href="Sobre_la_doctora.html">Sobre la doctora</a></li>
+          <li><a href>Tratamientos</a>
             <ul>
-                <li><img src="Images/LogoVR1.png"></li>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
-                <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
-                <li><a href="Tratamientos.html">Tratamientos</a></li>
+              <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
+              <li><a href="Bienestar facial.html">Bienestar facial</a></li>
+              <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
             </ul>
-        </nav>
-        </div>
+          </li>
+          <li><a href="Agenda_tu_cita.html">Agenda tu cita</a></li>
+        </ul>
+      </div>
     </header>
     <!--Banner-->
     <main>
         <section id="Banner">
-            <img src="Banner.png" alt="Banner Dra. Jenny Sarmiento">
-            <!--Aquí va un botón-->
+          <img src="Images/Banner.jpg" alt="Banner Dra. Jenny Sarmiento">
+          <div class="contenido-banner">
+            <a href="Agenda tu cita.html" class="boton-banner">Consulta aquí</a>
+          </div>
         </section>
+      </main>
+      
     <!--Testimonios-->
-        <section id="Historiasdebelleza">
-            <div class="container"><h3>Historias de belleza</h3></div>
-            <div class="container">
-                <div class="item img"><img src="Images/CarlosMilan.jpg" alt="Carlos Milan"><h2>Carlos Milan<h2></h2> <p>“Mi cabello nunca se vio tan bien, he recuperado mi confianza gracias a la mesoterapia de la doctora, estoy profundamente agradecido.”</p></div>
-                <div class="item img"><img src="Images/EmiliaCortez.jpg" alt="Emilia Cortez"><h2>Emilia Cortez</h2> <p>“¡¡¡Maravilloso!!!! Mi rostro tiene nueva vida, me siento como si tuviera 20 otra vez.” </p></div>
-                <div class="item img"><img src="Images/ValentinaBelanova.jpg" alt="Valentina Belanova"><h2>Valentina Belanova<h2> <p>“Después de pasar el peor momento de mi vida la doctora Jenny me ayudo a reconstruir eso que había perdido, muchisimas gracias.”</p></div>
-            </div>
-        </section>
+    <div class="contenedor-Historiasdebelleza">
+    <section id="Historiasdebelleza">
+        <h1>Historias de belleza</h1>
+        <div class="testimonios">
+          <div class="testimonio">
+            <img src="Images/CarlosMilan.jpg" alt="Carlos Milan">
+            <h2>Carlos Milan</h2>
+            <p>“Mi cabello nunca se vio tan bien, he recuperado mi confianza gracias a la mesoterapia de la doctora, estoy profundamente agradecido.”</p>
+          </div>
+          <div class="testimonio">
+            <img src="Images/EmiliaCortez.jpg" alt="Emilia Cortez">
+            <h2>Emilia Cortez</h2>
+            <p>“¡¡¡Maravilloso!!!! Mi rostro tiene nueva vida, me siento como si tuviera 20 otra vez.”</p>
+          </div>
+          <div class="testimonio">
+            <img src="Images/ValentinaBelanova.jpg" alt="Valentina Belanova">
+            <h2>Valentina Belanova</h2>
+            <p>“Después de pasar el peor momento de mi vida la doctora Jenny me ayudó a reconstruir eso que había perdido, muchísimas gracias.”</p>
+          </div>
+        </div>
+      </section>
+    </div>     
     <!--Mapa del consultorio-->
         <section id="Encuentranuestroconsultorio">
             <h2>Encuentra nuestro consultorio</h2>
@@ -49,13 +71,13 @@
   </iframe>
         </section>
     </main>
-    <footer>
-        <div class="fotter">
-            <nav>
-                <ul>
-                    <li><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></li>
-                    <li><a href="TyC.html">Terminos y condiciones</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+</body>
+    <footer id="TyC">
+        <table>
+            <tr>
+                <td><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></td>
+                <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
+            </tr>
+        </table>
+    </footer> 
+</html>
