--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
           <li><a href="Index.html">Inicio</a></li>
-          <li><a href="Sobre_la_doctora.html">Sobre la doctora</a></li>
+          <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
           <li><a href>Tratamientos</a>
             <ul>
               <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
