Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -20,7 +20,7 @@
                   <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
                 </ul>
               </li>
-              <li><a href="Agenda_tu_cita.html">Agenda tu cita</a></li>
+              <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
             </ul>
           </div>
         </header>
