--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -12,7 +12,7 @@
             <ul class="nav">
               <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
               <li><a href="Index.html">Inicio</a></li>
-              <li><a href="Sobre_la_doctora.html">Sobre la doctora</a></li>
+              <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
               <li><a href>Tratamientos</a>
                 <ul>
                   <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
@@ -24,7 +24,6 @@
             </ul>
           </div>
         </header>
-    <body>
         <!-- Presentación de la doctora -->
         <div class="contenedor-presentacion">
         <section id="presentacion-doctora">
@@ -51,10 +50,9 @@
               <button type="submit">Envíar</button>
               <button type="button">O escríbenos por WhatsApp</button>
             </div>
-            
           </form>
         </div>        
-        </Body>
+        </body>
         <footer id="TyC">
             <table>
                 <tr>
