--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="pagina">
     <header>
         <div class="header">
             <ul class="nav">
@@ -51,7 +52,8 @@
               <button type="button">O escríbenos por WhatsApp</button>
             </div>
           </form>
-        </div>        
+        </div>
+    </div>    
         </body>
         <footer id="TyC">
             <table>
