--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <div class="header">
             <ul class="nav">
@@ -24,7 +25,7 @@
             </ul>
           </div>
         </header>
-    <body>
+    <main>
         <h1>Escríbenos y Agenda tu cita</h1>
 
         <div class="seccion-formulario">
@@ -50,7 +51,9 @@
             <img src="Images/TratamientoSM.jpg" alt="TratamientoSM">
             <img src="Images/Skincare.jpg" alt="Skincare">
           </div>
-        </div>        
+        </div>
+    </main>
+    </div>
     </body>
     <footer id="TyC">
         <table>
