Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="layout">
     <header>
         <div class="header">
             <ul class="nav">
@@ -54,7 +54,6 @@
         </div>
     </main>
     </div>
-    </body>
     <footer id="TyC">
         <table>
             <tr>
@@ -62,5 +61,6 @@
                 <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
             </tr>
         </table>
-    </footer> 
+    </footer>
+</body>
 </html>
