Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -27,6 +27,7 @@
         </header>
         <main>
   <h1>Escríbenos y Agenda tu cita</h1>
+  <div class="seccion-formulario">
     <!-- Contenedor formulario -->
     <div class="Contenedor-formulario">
       <form action="FormCita" method="post">
@@ -42,6 +43,7 @@
           <button type="submit">Enviar</button>
         </div>
       </form>
+    </div>
   </div>
 </main>
           <!-- Imágenes fuera de la caja -->
