--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -7,7 +7,24 @@
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
+ <!--Barra de menú-->
+    <header>
+    <div class="header">
+        <ul class="nav">
+          <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
+          <li><a href="Index.html">Inicio</a></li>
+          <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
+          <li><a href>Tratamientos</a>
+            <ul>
+              <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
+              <li><a href="Bienestar facial.html">Bienestar facial</a></li>
+              <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
+            </ul>
+          </li>
+          <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
+        </ul>
+      </div>
+    </header>
   <h1>Escríbenos y agenda tu cita</h1>
 
   <div class="seccion-formulario">
