Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -25,8 +25,10 @@
         </ul>
       </div>
     </header>
-  <h1>Escríbenos y agenda tu cita</h1>
-
+  <!-- Título principal -->
+  <div class="titulo-principal">
+    <h1>Escríbenos y agenda tu cita</h1>
+  </div>
   <div class="seccion-formulario">
     <!-- Formulario -->
     <div class="Contenedor-formulario">
