--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,9 @@
     </div>     
     <!--Mapa del consultorio-->
         <section id="Encuentranuestroconsultorio">
+            <div class="titulo-principal">
             <h2>Encuentra nuestro consultorio</h2>
+            </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d248.52612385466628!2d-74.04002649503975!3d4.697216581684659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sstemwell%20bogota!5e0!3m2!1ses-419!2sco!4v1745268511233!5m2!1ses-419!2sco"
             width="100%" 
             height="400" 
