Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -35,7 +35,9 @@
          <img src="Images/Graduación.jpg" alt="Graduación Dra. Jenny Sarmiento">
         </section>
         </div>
+        <div class="titulo-principal">
         <h1>¿Tienes preguntas? Hablemos</h1>
+        </div>
         <!-- Formulario de contacto -->
         <div class="Contenedor-formulario">
           <form action="FormService" method="post">
