--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -3,16 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny Sarmiento medicina estética</title>
+    <title>Web Dra. Jenny Sarmiento</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
+    <!--Barra de menú-->
     <header>
-        <h1>Bienestar capilar</h1>
+    <div class="header">
+        <ul class="nav">
+          <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
+          <li><a href="Index.html">Inicio</a></li>
+          <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
+          <li><a href>Tratamientos</a>
+            <ul>
+              <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
+              <li><a href="Bienestar facial.html">Bienestar facial</a></li>
+              <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
+            </ul>
+          </li>
+          <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
+        </ul>
+      </div>
     </header>
-        <p>Contenido principal de la página.</p>
-    <footer>
-        <p>© 2025 Jenny Sarmiento medicina estetica. Todos los derechos reservados.</p>
-    </footer>
 </body>
+    <footer id="TyC">
+        <table>
+            <tr>
+                <td><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></td>
+                <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
+            </tr>
+        </table>
+    </footer> 
 </html>
