Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -25,6 +25,30 @@
         </ul>
       </div>
     </header>
+        <h1>Bienestar Capilar</h1>
+        <h3>Mesoterapia Capilar</h3>
+        <p>Tratamiento que consiste en
+            microinyecciones de vitaminas y
+            minerales en el cuero cabelludo para
+            estimular el crecimiento del cabello y
+            mejorar su salud.</p>
+            <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
+        <h3>Plasma Rico en Plaquetas</h3>
+        <p>Tratamiento que utiliza la sangre del
+            paciente para extraer el plasma rico en
+            plaquetas y aplicarlo en el cuero
+            cabelludo para estimular el crecimiento
+            del cabello y mejorar su salud.</p>
+            <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma Rico en Plaquetas">
+        <h3>Tratamiento farmacológico</h3>
+        <p>Combina medicamentos específicos
+            para fortalecer el cabello y combatir
+            la caída. Al aplicar directamente en el
+            cuero cabelludo, se estimulan los
+            folículos, promoviendo un
+            crecimiento más fuerte y saludable.</p>
+            <img src="Images/TratamientoFarmacologico.jpg" alt="Tratamiento Farmacologico">
+        <!-- Aquí va un botón que lleve a Agenda tu cita -->
 </body>
     <footer id="TyC">
         <table>
