Bienestar facial.html

--- a/Bienestar facial.html
+++ b/Bienestar facial.html
@@ -3,16 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny Sarmiento medicina estética</title>
+    <title>Web Dra. Jenny Sarmiento</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
+    <!--Barra de menú-->
     <header>
-        <h1>Bienestar facial</h1>
+    <div class="header">
+        <ul class="nav">
+          <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
+          <li><a href="Index.html">Inicio</a></li>
+          <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
+          <li><a href>Tratamientos</a>
+            <ul>
+              <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
+              <li><a href="Bienestar facial.html">Bienestar facial</a></li>
+              <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
+            </ul>
+          </li>
+          <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
+        </ul>
+      </div>
     </header>
-        <p>Contenido principal de la página.</p>
-    <footer>
-        <p>© 2025 Jenny Sarmiento medicina estetica. Todos los derechos reservados.</p>
-    </footer>
+    <h1>Armonización facial</h1>
+        <h3>Toxina botulínica</h3>
+        <p>Tratamiento inyectable que reduce
+            las arrugas y líneas de expresión al
+            relajar los músculos faciales.</p>
+            <img src="Images/ToxinaBotulinica.png" alt="Toxina Botulinica">
+        <h3>Ácido hialurónico</h3>
+        <p>Filler dérmico que hidrata y aporta
+            volumen a la piel, suavizando arrugas
+            y mejorando contornos faciales.</p>
+            <img src="Images/AcidoHialuronico.png" alt="Acido Hialuronico">
+        <h3>Plasma rico en plaquetas</h3>
+        <p>El tratamiento de plasma rico en plaquetas
+            (PRP) utiliza tu propia sangre para
+            regenerar la piel. Al concentrar las
+            plaquetas y plicarlas en áreas específicas,
+            se estimula la producción de colágeno.</p>
+            <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma rico en plaquetas">
+        <h3>Hidratación facial inyectable</h3>
+        <p>La hidratación facial profunda
+            revitaliza tu piel, devolviéndole su
+            brillo natural. Este tratamiento nutre
+            y repara, dejándote una piel más
+            suave, fresca y luminosa.</p>
+        <img src="Images/HidtrataciónFacial.png" alt="Hidratación facial inyectable">
+        <h3>Skin care</h3>
+        <p>Un buen skin care es la base para
+            una piel saludable y radiante. Cuidar
+            tu piel diariamente ayuda a
+            mantenerla joven, protegida y llena
+            de vida.</p>
+        <img src="Images/Jabón.png" alt="Jabón">
+        <!-- Aquí va un botón que lleve a Agenda tu cita -->
 </body>
+     <footer id="TyC">
+        <table>
+            <tr>
+                <td><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></td>
+                <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
+            </tr>
+        </table>
+    </footer> 
 </html>
