--- a/Micropigmentación.html
+++ b/Micropigmentación.html
@@ -3,16 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny Sarmiento medicina estética</title>
+    <title>Web Dra. Jenny Sarmiento</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
+    <!--Barra de menú-->
     <header>
-        <h1>Micropigmentación</h1>
+    <div class="header">
+        <ul class="nav">
+          <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
+          <li><a href="Index.html">Inicio</a></li>
+          <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
+          <li><a href>Tratamientos</a>
+            <ul>
+              <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
+              <li><a href="Bienestar facial.html">Bienestar facial</a></li>
+              <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
+            </ul>
+          </li>
+          <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
+        </ul>
+      </div>
     </header>
-        <p>Contenido principal de la página.</p>
-    <footer>
-        <p>© 2025 Jenny Sarmiento medicina estetica. Todos los derechos reservados.</p>
-    </footer>
+     <h1>Micropigmentación y Microblanding</h1>
+        <h3>Camuflaje de cicatrices</h3>
+        <p>El camuflaje de cicatrices es un
+            procedimiento diseñado para
+            minimizar la visibilidad de cicatrices
+            y mejorar la apariencia de la piel.</p>
+            <img src="Images/Cicatrices.png" alt="Camuflaje de cicatrices">
+        <h3>Labios</h3>
+        <p>La micropigmentación de labios es un
+            tratamiento estético que mejora el
+            color y la forma de tus labios,
+            brindándoles un aspecto más definido
+            y voluminoso.</p>
+            <img src="Images/Labios.png" alt="Labios">
+        <h3>Estrías</h3>
+        <p>El camuflaje de estrías es una técnica
+            avanzada de micropigmentación que
+            consiste en aplicar pigmentos en las
+            áreas afectadas, logrando que las
+            estrías se mezclen con el tono
+            natural de tu piel</p>
+            <img src="Images/Estrías.png" alt="Estrías">
+        <h3>Vitiligo</h3>
+        <p>El camuflaje de manchas por vitiligo es una técnica
+            avanzada de micropigmentación que
+            consiste en aplicar pigmentos en las
+            áreas afectadas, logrando que las
+            estrías se mezclen con el tono
+            natural de tu piel.</p>
+        <img src="Images/Vitiligo.png" alt="Vitiligo">
+        <h3>Cejas</h3>
+        <p>El microblading de cejas es una
+            técnica semipermanente que
+            redefine y da forma a tus cejas con
+            resultados naturales. Perfecto para
+            quienes buscan un look más definido
+            y armonioso.</p>
+        <img src="Images/Cejas.png" alt="cejas">
+        <h3>Areolas realistas</h3>
+        <p>La reconstrucción de areolas es una técnica
+            avanzada que permite restaurar la apariencia
+            natural del pecho después de una
+            mastectomía. Este procedimiento es esencial
+            para muchas mujeres que desean recuperar
+            su confianza.</p>
+        <img src="Images/Aureolas.png" alt="Areolas realistas">
+        <!-- Aquí va un botón que lleve a Agenda tu cita -->
 </body>
+ <footer id="TyC">
+        <table>
+            <tr>
+                <td><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></td>
+                <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
+            </tr>
+        </table>
+    </footer> 
 </html>
