Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -26,13 +26,21 @@
       </div>
     </header>
         <h1>Bienestar Capilar</h1>
+    <section id="seccion-especial">
+        <div class="contenido-especial">
+            <div class="texto-especial">
         <h3>Mesoterapia Capilar</h3>
         <p>Tratamiento que consiste en
             microinyecciones de vitaminas y
             minerales en el cuero cabelludo para
             estimular el crecimiento del cabello y
             mejorar su salud.</p>
+            </div>
+            <div class="imagen-especial">
             <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
+            </div>
+        </div>
+    </section>
         <h3>Plasma Rico en Plaquetas</h3>
         <p>Tratamiento que utiliza la sangre del
             paciente para extraer el plasma rico en
