--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -26,21 +26,21 @@
       </div>
     </header>
         <h1>Bienestar Capilar</h1>
-    <section id="seccion-especial">
-        <div class="contenido-especial">
-            <div class="texto-especial">
+    <section class="bloque-tratamiento">
+  <div class="contenido-bloque">
+    <div class="texto">
         <h3>Mesoterapia Capilar</h3>
         <p>Tratamiento que consiste en
             microinyecciones de vitaminas y
             minerales en el cuero cabelludo para
             estimular el crecimiento del cabello y
             mejorar su salud.</p>
-            </div>
-            <div class="imagen-especial">
+    <div class="imagen">
             <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
-            </div>
-        </div>
-    </section>
+         </div>
+  </div>
+</section>
+    
         <h3>Plasma Rico en Plaquetas</h3>
         <p>Tratamiento que utiliza la sangre del
             paciente para extraer el plasma rico en
