Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -26,8 +26,8 @@
       </div>
     </header>
         <h1>Bienestar Capilar</h1>
-    <section class="bloque-tratamiento">
-  <div class="contenido-bloque">
+   <section class="bloque-tratamiento-con-imagen">
+       <div class="bloque-tratamiento">
     <div class="texto">
         <h3>Mesoterapia Capilar</h3>
         <p>Tratamiento que consiste en
@@ -35,11 +35,11 @@
             minerales en el cuero cabelludo para
             estimular el crecimiento del cabello y
             mejorar su salud.</p>
-    <div class="imagen">
+    </div>
+    <div class="imagen-externa">
             <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
-         </div>
-  </div>
-</section>
+    </div>
+   </section>
     
         <h3>Plasma Rico en Plaquetas</h3>
         <p>Tratamiento que utiliza la sangre del
