Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -27,20 +27,17 @@
     </header>
         <h1>Bienestar Capilar</h1>
    <section class="bloque-tratamiento-con-imagen">
-       <div class="bloque-tratamiento">
+  <div class="imagen-externa">
+    <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
+  </div>
+  <div class="bloque-tratamiento">
     <div class="texto">
-        <h3>Mesoterapia Capilar</h3>
-        <p>Tratamiento que consiste en
-            microinyecciones de vitaminas y
-            minerales en el cuero cabelludo para
-            estimular el crecimiento del cabello y
-            mejorar su salud.</p>
+      <h3>Mesoterapia Capilar</h3>
+      <p>Tratamiento que consiste en microinyecciones de vitaminas y minerales en el cuero cabelludo para estimular el crecimiento del cabello y mejorar su salud.</p>
     </div>
-    <div class="imagen-externa">
-            <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
-    </div>
-   </section>
-    
+  </div>
+</section>
+
         <h3>Plasma Rico en Plaquetas</h3>
         <p>Tratamiento que utiliza la sangre del
             paciente para extraer el plasma rico en
