--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -26,7 +26,7 @@
       </div>
     </header>
         <h1>Bienestar Capilar</h1>
-   <section class="bloque-tratamiento-con-imagen">
+   <section class="bloque-tratamiento-con-imagen-verde">
   <div class="imagen-externa">
     <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
   </div>
@@ -37,14 +37,21 @@
     </div>
   </div>
 </section>
-
+<section class="bloque-tratamiento-con-imagen-verde">
+    <div class="bloque-tratamiento">
+    <div class="texto">
         <h3>Plasma Rico en Plaquetas</h3>
         <p>Tratamiento que utiliza la sangre del
             paciente para extraer el plasma rico en
             plaquetas y aplicarlo en el cuero
             cabelludo para estimular el crecimiento
             del cabello y mejorar su salud.</p>
+    </div>
+        <div class="imagen-externa">
             <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma Rico en Plaquetas">
+        </div>
+    </div>
+</section>
         <h3>Tratamiento farmacológico</h3>
         <p>Combina medicamentos específicos
             para fortalecer el cabello y combatir
