Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -38,33 +38,49 @@
     </div>
   </div>
 </section>
-
-<!-- Plasma Rico en Plaquetas - Imagen a la derecha -->
-<section class="bloque-tratamiento-con-imagen-verde">
-  <div class="bloque-tratamiento">
-    <div class="texto">
-      <h3>Plasma Rico en Plaquetas</h3>
-      <p>Tratamiento que utiliza la sangre del paciente para extraer el plasma rico en plaquetas y aplicarlo en el cuero cabelludo para estimular el crecimiento del cabello y mejorar su salud.</p>
+<!-- Mesoterapia Capilar - Imagen a la izquierda -->
+  <section class="bloque-tratamiento-con-imagen-verde">
+    <div class="imagen-externa">
+      <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
     </div>
-  </div>
-  <div class="imagen-externa">
-    <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma Rico en Plaquetas">
-  </div>
-</section>
-
-<!-- Tratamiento Farmacológico - Imagen a la derecha -->
-<section class="bloque-tratamiento-con-imagen-verde">
-  <div class="bloque-tratamiento">
-    <div class="texto">
-      <h3>Tratamiento farmacológico</h3>
-      <p>Combina medicamentos específicos para fortalecer el cabello y combatir la caída. Al aplicar directamente en el cuero cabelludo, se estimulan los folículos, promoviendo un crecimiento más fuerte y saludable.</p>
+    <div class="bloque-tratamiento">
+      <div class="texto">
+        <h3>Mesoterapia Capilar</h3>
+        <p>Tratamiento que consiste en microinyecciones de vitaminas y minerales en el cuero cabelludo para estimular el crecimiento del cabello y mejorar su salud.</p>
+      </div>
     </div>
+  </section>
+
+  <!-- Plasma Rico en Plaquetas - Imagen a la derecha -->
+  <section class="bloque-tratamiento-con-imagen-verde">
+    <div class="bloque-tratamiento">
+      <div class="texto">
+        <h3>Plasma Rico en Plaquetas</h3>
+        <p>Tratamiento que utiliza la sangre del paciente para extraer el plasma rico en plaquetas y aplicarlo en el cuero cabelludo para estimular el crecimiento del cabello y mejorar su salud.</p>
+      </div>
+    </div>
+    <div class="imagen-externa">
+      <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma Rico en Plaquetas">
+    </div>
+  </section>
+
+  <!-- Tratamiento Farmacológico - Imagen a la derecha -->
+  <section class="bloque-tratamiento-con-imagen-verde">
+    <div class="bloque-tratamiento">
+      <div class="texto">
+        <h3>Tratamiento farmacológico</h3>
+        <p>Combina medicamentos específicos para fortalecer el cabello y combatir la caída. Al aplicar directamente en el cuero cabelludo, se estimulan los folículos, promoviendo un crecimiento más fuerte y saludable.</p>
+      </div>
+    </div>
+    <div class="imagen-externa">
+      <img src="Images/TratamientoFarmacologico.jpg" alt="Tratamiento Farmacológico">
+    </div>
+  </section>
+
+  <!-- Botón Agenda tu cita -->
+  <div class="boton-cita">
+    <a href="#agenda">Agenda tu cita</a>
   </div>
-  <div class="imagen-externa">
-    <img src="Images/TratamientoFarmacologico.jpg" alt="Tratamiento Farmacológico">
-  </div>
-</section>
-        <!-- Aquí va un botón que lleve a Agenda tu cita -->
 </body>
     <footer id="TyC">
         <table>
