--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -25,19 +25,9 @@
         </ul>
       </div>
     </header>
+    <div class="titulo-principal">
         <h1>Bienestar Capilar</h1>
-   <!-- Mesoterapia Capilar - Imagen a la izquierda -->
-<section class="bloque-tratamiento-con-imagen-verde">
-  <div class="imagen-externa">
-    <img src="Images/MesoterapiaCapilar.png" alt="Mesoterapia Capilar">
-  </div>
-  <div class="bloque-tratamiento">
-    <div class="texto">
-      <h3>Mesoterapia Capilar</h3>
-      <p>Tratamiento que consiste en microinyecciones de vitaminas y minerales en el cuero cabelludo para estimular el crecimiento del cabello y mejorar su salud.</p>
     </div>
-  </div>
-</section>
 <!-- Mesoterapia Capilar - Imagen a la izquierda -->
   <section class="bloque-tratamiento-con-imagen-verde">
     <div class="imagen-externa">
@@ -79,7 +69,7 @@
 
   <!-- Botón Agenda tu cita -->
   <div class="boton-cita">
-    <a href="#agenda">Agenda tu cita</a>
+    <a href="Agenda tu cita.html">Agenda tu cita</a>
   </div>
 </body>
     <footer id="TyC">
