Bienestar facial.html

--- a/Bienestar facial.html
+++ b/Bienestar facial.html
@@ -25,39 +25,89 @@
         </ul>
       </div>
     </header>
+    <div class="titulo-principal">
     <h1>Armonización facial</h1>
+    </div>
+    <!-- Toxina botulinica izquierda-->
+    <section class="bloque-tratamiento-con-imagen-verde">
+    <div class="imagen-externa">
+        <img src="Images/ToxinaBotulinica.png" alt="Toxina Botulinica">
+    </div>
+        <div class="bloque-tratamiento">
+            <div class="texto">
         <h3>Toxina botulínica</h3>
         <p>Tratamiento inyectable que reduce
             las arrugas y líneas de expresión al
             relajar los músculos faciales.</p>
-            <img src="Images/ToxinaBotulinica.png" alt="Toxina Botulinica">
+            </div>
+        </div>
+    </section>
+            <!-- Ácido hialurónico derecha-->
+    <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="bloque-tratamiento">
+            <div class="texto">
         <h3>Ácido hialurónico</h3>
         <p>Filler dérmico que hidrata y aporta
             volumen a la piel, suavizando arrugas
             y mejorando contornos faciales.</p>
+            </div>
+        </div>
+        <div class="imagen-externa">
             <img src="Images/AcidoHialuronico.png" alt="Acido Hialuronico">
+        </div>
+    </section>
+    <!-- Plasma rico en plaquetas izquierda -->
+    <section class="bloque-tratamiento-con-imagen-verde">
+                <div class="imagen-externa">
+            <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma rico en plaquetas">
+        </div>
+    <div class="bloque-tratamiento">
+         <div class="texto">
         <h3>Plasma rico en plaquetas</h3>
         <p>El tratamiento de plasma rico en plaquetas
             (PRP) utiliza tu propia sangre para
             regenerar la piel. Al concentrar las
             plaquetas y plicarlas en áreas específicas,
             se estimula la producción de colágeno.</p>
-            <img src="Images/Plasma rico en Plaquetas.png" alt="Plasma rico en plaquetas">
+         </div>
+    </div>
+    </section>
+     <!-- Hidratación facial derecha -->
+    <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="bloque-tratamiento">
+            <div class="texto">
         <h3>Hidratación facial inyectable</h3>
         <p>La hidratación facial profunda
             revitaliza tu piel, devolviéndole su
             brillo natural. Este tratamiento nutre
             y repara, dejándote una piel más
             suave, fresca y luminosa.</p>
+            </div>
+        </div>
+        <div class="imagen-externa">
         <img src="Images/HidtrataciónFacial.png" alt="Hidratación facial inyectable">
+        </div>
+    </section>
+     <!-- Skin care izquierda -->
+    <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="imagen-externa">
+             <img src="Images/Jabón.png" alt="Jabón">
+        </div>
+         <div class="bloque-tratamiento">
+      <div class="texto">
         <h3>Skin care</h3>
         <p>Un buen skin care es la base para
             una piel saludable y radiante. Cuidar
             tu piel diariamente ayuda a
             mantenerla joven, protegida y llena
             de vida.</p>
-        <img src="Images/Jabón.png" alt="Jabón">
-        <!-- Aquí va un botón que lleve a Agenda tu cita -->
+      </div>
+         </div>
+    </section>
+        <!-- Botón Agenda tu cita -->
+  <div class="boton-cita">
+    <a href="Agenda tu cita.html">Agenda tu cita</a>
+  </div>
 </body>
      <footer id="TyC">
         <table>
