--- a/Micropigmentación.html
+++ b/Micropigmentación.html
@@ -25,20 +25,45 @@
         </ul>
       </div>
     </header>
+    <!-- Micropigmentación izquierda -->
+    <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="imagen-externa"> 
+            <img src="Images/Cicatrices.png" alt="Camuflaje de cicatrices">
+        </div>
+        <div class="bloque-tratamiento">
+             <div class="texto">
      <h1>Micropigmentación y Microblanding</h1>
         <h3>Camuflaje de cicatrices</h3>
         <p>El camuflaje de cicatrices es un
             procedimiento diseñado para
             minimizar la visibilidad de cicatrices
             y mejorar la apariencia de la piel.</p>
-            <img src="Images/Cicatrices.png" alt="Camuflaje de cicatrices">
+             </div>
+        </div>
+    </section>
+    <!-- Labios derecha-->
+    <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="bloque-tratamiento">
+            <div class="texto">
         <h3>Labios</h3>
         <p>La micropigmentación de labios es un
             tratamiento estético que mejora el
             color y la forma de tus labios,
             brindándoles un aspecto más definido
             y voluminoso.</p>
+            </div>
+        </div>
+        <div class="imagen-externa">
             <img src="Images/Labios.png" alt="Labios">
+        </div>
+    </section>
+    <!-- Estrías izquierda -->
+    <section class="bloque-tratamiento-con-imagen-verde">
+                <div class="imagen-externa">
+                    <img src="Images/Estrías.png" alt="Estrías">
+                </div>
+        <div class="bloque-tratamiento">
+         <div class="texto">
         <h3>Estrías</h3>
         <p>El camuflaje de estrías es una técnica
             avanzada de micropigmentación que
@@ -46,7 +71,13 @@
             áreas afectadas, logrando que las
             estrías se mezclen con el tono
             natural de tu piel</p>
-            <img src="Images/Estrías.png" alt="Estrías">
+         </div>
+        </div>
+    </section>
+    <!-- Hidratación facial derecha -->
+     <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="bloque-tratamiento">
+            <div class="texto">
         <h3>Vitiligo</h3>
         <p>El camuflaje de manchas por vitiligo es una técnica
             avanzada de micropigmentación que
@@ -54,7 +85,19 @@
             áreas afectadas, logrando que las
             estrías se mezclen con el tono
             natural de tu piel.</p>
+            </div>
+        </div>
+          <div class="imagen-externa">
         <img src="Images/Vitiligo.png" alt="Vitiligo">
+          </div>
+     </section>
+     <!-- Cejas izquierda -->
+    <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="imagen-externa">
+            <img src="Images/Cejas.png" alt="cejas">
+        </div>
+        <div class="bloque-tratamiento">
+      <div class="texto">
         <h3>Cejas</h3>
         <p>El microblading de cejas es una
             técnica semipermanente que
@@ -62,7 +105,13 @@
             resultados naturales. Perfecto para
             quienes buscan un look más definido
             y armonioso.</p>
-        <img src="Images/Cejas.png" alt="cejas">
+      </div>
+        </div>
+    </section>
+         <!-- Areolas derecha -->
+     <section class="bloque-tratamiento-con-imagen-verde">
+        <div class="bloque-tratamiento">
+            <div class="texto">
         <h3>Areolas realistas</h3>
         <p>La reconstrucción de areolas es una técnica
             avanzada que permite restaurar la apariencia
@@ -70,8 +119,16 @@
             mastectomía. Este procedimiento es esencial
             para muchas mujeres que desean recuperar
             su confianza.</p>
+            </div>
+        </div>
+         <div class="imagen-externa">
         <img src="Images/Aureolas.png" alt="Areolas realistas">
-        <!-- Aquí va un botón que lleve a Agenda tu cita -->
+         </div>
+     </section>
+     <!-- Botón Agenda tu cita -->
+  <div class="boton-cita">
+    <a href="Agenda tu cita.html">Agenda tu cita</a>
+  </div>
 </body>
  <footer id="TyC">
         <table>
