Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -54,16 +54,16 @@
     </div>
   </section>
 
-  <!-- Tratamiento Farmacológico - Imagen a la derecha -->
+  <!-- Tratamiento Farmacológico - Imagen a la izquierda -->
   <section class="bloque-tratamiento-con-imagen-verde">
+       <div class="imagen-externa">
+      <img src="Images/TratamientoFarmacologico.jpg" alt="Tratamiento Farmacológico">
+    </div>
     <div class="bloque-tratamiento">
       <div class="texto">
         <h3>Tratamiento farmacológico</h3>
         <p>Combina medicamentos específicos para fortalecer el cabello y combatir la caída. Al aplicar directamente en el cuero cabelludo, se estimulan los folículos, promoviendo un crecimiento más fuerte y saludable.</p>
       </div>
-    </div>
-    <div class="imagen-externa">
-      <img src="Images/TratamientoFarmacologico.jpg" alt="Tratamiento Farmacológico">
     </div>
   </section>
 
