--- a/TyC.html
+++ b/TyC.html
@@ -7,7 +7,29 @@
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
+    <!--Barra de menú-->
+    <header>
+    <div class="header">
+        <ul class="nav">
+          <li><img src="Images/LogoVR1.png" alt="Logo" class="logo"></li>
+          <li><a href="Index.html">Inicio</a></li>
+          <li><a href="Sobre la doctora.html">Sobre la doctora</a></li>
+          <li><a href>Tratamientos</a>
+            <ul>
+              <li><a href="Bienestar capilar.html">Bienestar Capilar</a></li>
+              <li><a href="Bienestar facial.html">Bienestar facial</a></li>
+              <li><a href="Micropigmentación.html">Micropigmentación y Microblading</a></li>
+            </ul>
+          </li>
+          <li><a href="Agenda tu cita.html">Agenda tu cita</a></li>
+        </ul>
+      </div>
+    </header>
+    
+    <div class="titulo-principal">
         <h1>Terminos y condiciones</h1>
+    </div>
+    <div class="terminos-condiciones">
         <p>Estos son los terminos y condiciones de la web de la Dra. Jenny Sarmiento.</p>
         <p>Al utilizar este sitio web, aceptas cumplir con los siguientes términos y condiciones:</p>
         <ul>
@@ -17,14 +39,15 @@
             <li><p><b>3. Cuidados y recomendaciones</b>🌿 Post-tratamiento : Para garantizar resultados óptimos, te brindaremos recomendaciones personalizadas después de cada procedimiento. 🌞 Protección de la piel : Evita la exposición al sol, el consumo de alcohol o la aplicación de productos no recomendados durante el tiempo indicado. 🚨 Cuidado y seguimiento : Si notas alguna reacción inesperada, comunícate con nosotros de inmediato para brindarte la mejor orientación.</p></li>
             <li><p><b>4. Privacidad y Confidencialidad</b>🔒 La seguridad de tu información es nuestra prioridad. Todos los datos personales, fotografías y detalles médicos serán tratados con absoluta confidencialidad y solo se utilizarán con su consentimiento para fines médicos o educativos</p></li>
             <li><p><b>5. Contacto y Asesoría Personalizada</b>Si tienes dudas o deseas agendar tu cita, estamos aquí para atenderte con la mejor disposición.📍 Consultorio en Bogotá 📞 WhatsApp: +57 318 900 4216 📧 Correo electrónico: [ correo@example.com ] 📲 Síguenos en redes: @drajennysarmiento_Tu belleza y bienestar son nuestra prioridad. ✨</p></li>
-</body>
-<footer>
-    <div class="fotter">
-        <nav>
-            <ul>
-                <li><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></li>
-                <li><a href="TyC.html">Terminos y condiciones</a></li>
-            </ul>
-        </nav>
+        </ul>
     </div>
-</footer>
+        </body>
+<footer id="TyC">
+        <table>
+            <tr>
+                <td><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></td>
+                <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
+            </tr>
+        </table>
+    </footer> 
+</html>
