Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -39,7 +39,14 @@
 
         <label for="correo">Escribe tu correo</label>
         <input type="text" id="correo" name="correo" required>
-
+          <!-- Menú desplegable -->
+  <label for="preferencia">Selecciona como deseas recibir la consulta:</label>
+  <select name="preferencia" id="preferencia" required>
+    <option value="">-- Selecciona una opción --</option>
+    <option value="mesoterapia">En casa</option>
+    <option value="plasma">En conslutorio</option>
+  </select>
+  <br><br>
         <div class="botones">
           <button type="submit">Enviar</button>
           <button type="submit">Escríbenos por WhatsApp</button>
