Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -44,7 +44,7 @@
   <select name="preferencia" id="preferencia" required>
     <option value="">-- Selecciona una opción --</option>
     <option value="mesoterapia">En casa</option>
-    <option value="plasma">En conslutorio</option>
+    <option value="plasma">En consultorio</option>
   </select>
   <br><br>
         <div class="botones">
