Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -42,7 +42,7 @@
           <!-- Menú desplegable -->
   <label for="preferencia">Selecciona como deseas recibir la consulta:</label>
   <select name="preferencia" id="preferencia" required>
-    <option value="">-- Selecciona una opción --</option>
+    <option value="">Selecciona una opción</option>
     <option value="mesoterapia">En casa</option>
     <option value="plasma">En consultorio</option>
   </select>
